fixed gap between skill containers

--- a/src/mobile.scss
+++ b/src/mobile.scss
@@ -225,6 +225,7 @@
         flex-direction: column;
         width: 100%;
         align-items: center;
+        gap: 32px;
         .skills-container {
           display: flex;
           flex-direction: column;
